# BreakOut

./: CMakeLists.txt  README.md  glad.c  main.cpp
assets/shaders/: sprite.frag
include/glad/: glad.h
src/: BallObject.cpp  BallObject.h  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h
